--- a/style.css
+++ b/style.css
@@ -1,32 +1,149 @@
-/* base class for the three rectangles */
-.rectangle {
-    background-color: lightgrey;
-    border-style: solid;
-    border-width: 15px;
-    font-size: 100%;
-    border-radius: 30%;
-    /* top - right, bottom, left */
-    padding: 20px 20px 20px 50px;
-    margin: 20px;
-    display: none;
-    float: left;
-}
-.rectangle[style*="display: block"] {
-    display: inline-block !important;
-}
-#greenBox {
-    border-color: green;
-    width: fit-content;
-}
-#blueBox {
-    border-color: blue;
-    width: fit-content;
-}
-#redBox {
-    border-color: red;
-    text-align: center;
-    border-radius: 0.5%;
-    width: fit-content;
-    padding: 20px 10px 20px 10px;
-    clear: both;
-}
+            .box {
+                background-color: antiquewhite;
+                box-shadow: 8px 8px 6px grey;
+                width: 450px;
+                border-style: solid;
+                border-width: 3px;
+                border-color: lightblue;
+                padding-left: 10px;
+                padding-right: 10px;
+                padding-bottom: 10px;
+                margin-left: 2px;
+            }
+            body {
+                background-color: #f0f0f2;
+                margin: 0;
+                padding: 2em;
+                font-family: -apple-system, system-ui, BlinkMacSystemFont,
+                    "Segoe UI", "Open Sans", "Helvetica Neue", Helvetica, Arial,
+                    sans-serif;
+            }
+            input {
+                margin: 10px 3px 10px 3px;
+                border: 1px solid grey;
+                border-radius: 5px;
+                font-size: 12px;
+                padding: 5px 5px 5px 5px;
+            } label {
+                position: relative;
+                top: 12px;
+                width: 190px;
+                float: left;
+            }
+            #submitButton {
+                width: 80px;
+                margin-left: 20px;
+            }
+            #errorMessage {
+                color: red;
+                font-size: 90% !important;
+            }
+            #successMessage {
+                color: green;
+                font-size: 90% !important;
+                display: block;
+                margin-top: 20px;
+            }
+            .button {
+                font-size: 13px;
+                color: red;
+                background-color: #f8fad7;
+            }
+            .button:hover {
+                background-color: #fadad7;
+            }
+            #draggable {
+                cursor: n-resize;
+            }
+            #cdcfieldset {
+                cursor: move;
+                border: 1px black solid;
+                background-color: #cac3ba;
+                width: 400px;
+            }
+            input.currency {
+                text-align: left;
+                padding-right: 15px;
+            }
+            .input-group .form-control {
+                float: none;
+            }
+            .input-group .input-buttons {
+                position: relative;
+                z-index: 3;
+            } .messages { text-align: center;
+            }
+            legend{
+              border: 5px lightblue solid;
+              margin-left: 1em;
+              background-color: #ff6347;
+              padding: 0.2em 0.8em;
+            }
+            .input-group-addon{
+              color: black;
+            }
+            .input-group-blank{
+              color:antiquewhite;
+            }
+            #price-table-form{
+                width: 650px;
+                height: 600px;
+                margin-top:10px;
+                padding: 10px;
+                margin-left: 2px;
+
+            }
+            #table-total{
+              font-family: arial, sans-serif;
+              border-collapse: collapse;
+              width: 100%;
+            }
+            .table-total-column{
+              border 1px solid #dddddd;
+              background-color orange;
+              padding 10px;
+            }
+            #teste{
+              border 1px solid #dddddd;
+              background-color black;
+              padding 10px;
+            }
+            #pricefieldset{
+                cursor: move;
+                border: 1px black solid;
+                background-color: #cac3ba;
+                width: 600px;
+            }
+            #box-price{
+                border: 1px black solid;
+                background-color: antiquewhite;
+                width: 600px;
+                box-shadow: 8px 8px 6px grey;
+                border-style: solid;
+                border-width: 3px;
+                border-color: lightblue;
+                padding-left: 10px;
+                padding-right: 10px;
+                padding-bottom: 10px;
+                margin-left: 2px;
+            }
+            #price-table-total{
+              width: 100%;
+              border:1px solid black;
+              border-collapse: collapse;
+            }
+            .total-td, .total-th{
+              border:1px solid black;
+              text-align: left;
+              padding: 8px;
+              color red;
+            }
+            #newtonfildset{
+                cursor: move;
+                border: 1px black solid;
+                background-color: #cac3ba;
+                width: 500px;
+            }
+            #order-table{
+              display: flex;
+            }
